hphp/hack/test/typecheck/shape_field_punning/invalid_syntax.php.exp
ERROR: File "invalid_syntax.php", line 11, characters 14-23:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
ERROR: File "invalid_syntax.php", line 11, characters 24-24:
An arrow `=>` is expected here. (Parsing[1002])
ERROR: File "invalid_syntax.php", line 17, characters 14-20:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
ERROR: File "invalid_syntax.php", line 22, characters 14-24:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
ERROR: File "invalid_syntax.php", line 27, characters 14-15:
Shape field name must be a nonempty single-quoted string or a class constant (Parsing[1002])
ERROR: File "invalid_syntax.php", line 11, characters 24-24:
Unbound name: `)` (a global constant) (Naming[2049])
ERROR: File "invalid_syntax.php", line 17, characters 21-21:
Unbound name: `)` (a global constant) (Naming[2049])
ERROR: File "invalid_syntax.php", line 22, characters 25-25:
Unbound name: `)` (a global constant) (Naming[2049])
ERROR: File "invalid_syntax.php", line 27, characters 16-16:
Unbound name: `)` (a global constant) (Naming[2049])
ERROR: File "invalid_syntax.php", line 32, characters 21-21:
Unbound name: `)` (a global constant) (Naming[2049])
ERROR: File "invalid_syntax.php", line 11, characters 24-24:
Unbound global constant (Typing) (Typing[4106])
ERROR: File "invalid_syntax.php", line 17, characters 21-21:
Unbound global constant (Typing) (Typing[4106])
ERROR: File "invalid_syntax.php", line 22, characters 25-25:
Unbound global constant (Typing) (Typing[4106])
ERROR: File "invalid_syntax.php", line 27, characters 16-16:
Unbound global constant (Typing) (Typing[4106])
ERROR: File "invalid_syntax.php", line 32, characters 21-21:
Unbound global constant (Typing) (Typing[4106])
